--- a/source/posts/2014-07-13-criando-formulario-de-contato-para-wordpress-com-odin-framework.md.erb
+++ b/source/posts/2014-07-13-criando-formulario-de-contato-para-wordpress-com-odin-framework.md.erb
@@ -12,7 +12,9 @@ tags:
 - wordpress
 ---
 
-<%= image_tag '/assets/images/posts/2014/07/criando-formulario-de-contato-para-wordpress-com-odin-framework.png' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2014/07/criando-formulario-de-contato-para-wordpress-com-odin-framework.png' %>
+</div>
 
 Faaaaaaaaala ai pessoas, tudo jóia?
 
