--- a/source/posts/2015-08-01-meu-ambiente-de-trabalho-em-7-itens.md.erb
+++ b/source/posts/2015-08-01-meu-ambiente-de-trabalho-em-7-itens.md.erb
@@ -11,7 +11,9 @@ tags:
 - desenvolvimento
 ---
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-de-trabalho-em-7-itens.png', alt: "Meu ambiente de trabalho em 7 itens" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-de-trabalho-em-7-itens.png', alt: "Meu ambiente de trabalho em 7 itens" %>
+</div>
 
 ### 1. Sistema Operacional - Hoje sou livre!
 
@@ -19,7 +21,9 @@ Aderi ao **GNU linux** como OS padrão no final de 2014, apesar de usá-lo desde
 
 Uso **Ubuntu 15.04** com **Gnome-shell 3.14** pois acho ele muito bonito, elegante e rápido. Uso também uma máquina virtual com o *Windows 8.1* e *Windows 7* para testes em navegadores mais antigos (ie8) e as vezes abrir o Photoshop de vez em quando.
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-de-trabalho-detalhes-do-sistema.png', alt: "Detalhes do sistema" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-de-trabalho-detalhes-do-sistema.png', alt: "Detalhes do sistema" %>
+</div>
 
 ***
 
@@ -27,7 +31,9 @@ Uso **Ubuntu 15.04** com **Gnome-shell 3.14** pois acho ele muito bonito, elegan
 
 Uso o [Sublime text 3](http://www.sublimetext.com/3) como editor de código padrão, gratuito e indispensável para um desenvolvedor front-end
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-sublime-text-3.png', alt: "Sublime text 3" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-sublime-text-3.png', alt: "Sublime text 3" %>
+</div>
 
 Eu costumo sempre que instalar meu **Sublime Text**, já sair instalando meus pacotes, segue a lista:
 
@@ -64,7 +70,9 @@ Hoje uso o **Yakuake** com muito prazer, e sou mais feliz por isso.
 
 Ah! Não poderia esquecer do **[Fish shell](http://fishshell.com/)**, com ele tudo fica mais fácil no terminal, sério, tudo.
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-linha-de-comando-yakuake-fish-shell.png', alt: "Yakuake e fish shell" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-linha-de-comando-yakuake-fish-shell.png', alt: "Yakuake e fish shell" %>
+</div>
 
 ***
 
@@ -74,7 +82,9 @@ Mas é claro que é o **Git**, não precisaria nem discutir isso aqui pelo simpl
 
 Uso **[Github](http://github.com/nandomoreirame)** para repositórios públicos e **[Bitbucket](https://bitbucket.org/)** para repositórios privados.
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-github.jpg', alt: "Github" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-github.jpg', alt: "Github" %>
+</div>
 
 ***
 
@@ -84,7 +94,9 @@ Todo front-end precisa usar um **[pré-processador](https://goo.gl/G79yVN)**, se
 
 Eu uso **[SASS/SCSS](http://sass-lang.com/)**, apesar de ouvir falar muito bem do **Stylus** prefiro ficar com o **SASS**, ele tem tudo que preciso em um pré-processador e muito mais..
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-sass-compass.jpg', alt: "SASS e Compass" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-sass-compass.jpg', alt: "SASS e Compass" %>
+</div>
 
 ***
 
@@ -94,7 +106,9 @@ Eu uso **[SASS/SCSS](http://sass-lang.com/)**, apesar de ouvir falar muito bem d
 
 O **Gulp** é muito mais rápido que o **Grunt**, pois ele faz uso das streams do node para escrever arquivos diretamente para o disco, dispensando intermediários.
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-gulpjs.png', alt: "Gulpjs" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-gulpjs.png', alt: "Gulpjs" %>
+</div>
 
 Junto com ele uso uma série de *packages*, que são indispensáveis em meu arsenal, são eles:
 
@@ -122,7 +136,9 @@ Junto com ele uso uma série de *packages*, que são indispensáveis em meu arse
 
 Nós usamos o **[Jira](https://www.atlassian.com/software/jira)** lá na **[MalaPronta.com](http://www.malapronta.com.br)** um software incrível da **Atlassian** a mesma empresa que criou o **Bitbucket**.
 
-<%= image_tag '/assets/images/posts/2015/08/meu-ambiente-jira.png', alt: "Jira Atlassian" %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/08/meu-ambiente-jira.png', alt: "Jira Atlassian" %>
+</div>
 
 Pessoalmente eu sou meio desorganizado quanto a isso, preciso me gerenciar melhor. Eu uso o **[Google Keep](https://keep.google.com/)** para anotações rápidas, pelo fato de ter o sincronismo com todos os meus aparelhos rapidamente.
 
