--- a/source/posts/2015-09-02-sass-variaveis-parte-2.md.erb
+++ b/source/posts/2015-09-02-sass-variaveis-parte-2.md.erb
@@ -11,7 +11,9 @@ tags:
 - pre-processador
 ---
 
-<%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+</div>
 
 Vamos continuar nossa série **"Conhecendo o pré-processador SASS"**, mas agora falando de **Variáveis**.
 
