--- a/source/posts/2015-09-05-sass-parte-4-funcoes.md.erb
+++ b/source/posts/2015-09-05-sass-parte-4-funcoes.md.erb
@@ -11,7 +11,9 @@ tags:
 - pre-processador
 ---
 
-<%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+<div class="images">
+  <%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+</div>
 
 Esse artigo será bem rápido, vou falar sobre o recurso que deixa o **SASS** ainda mais com cara de linguagem de programação, são as **funções**.
 
