--- a/source/posts/2015-09-27-sass-parte-5-placeholder.md.erb
+++ b/source/posts/2015-09-27-sass-parte-5-placeholder.md.erb
@@ -11,7 +11,9 @@ tags:
  - pre-processador
 ---
 
-<%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+</div>
 
 Nos artigos anteriores eu falei sobre _[Funções](/sass-parte-4-funcoes/)_ e sobre _[Mixins](/sass-parte-3-mixins/)_ do **SASS**, mas sem sombra de dúvidas, uma das funcionalidades mais legais do SASS (na minha opinião) é você poder criar _[placeholders](http://sass-lang.com/documentation/file.SASS_REFERENCE.html#placeholder_selectors_)_ para agrupamento de códigos repetidos.
 
