--- a/source/posts/2015-09-27-yeoman-generator-gulp-boilerplate.md.erb
+++ b/source/posts/2015-09-27-yeoman-generator-gulp-boilerplate.md.erb
@@ -11,7 +11,9 @@ tags:
 - yeoman
 ---
 
-<%= image_tag '/assets/images/posts/2015/09/yeoman.jpg' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/09/yeoman.jpg' %>
+</div>
 
 Eu criei um [repositório](https://github.com/nandomoreirame/gulp-boilerplate) no [Github](https://github.com/) onde mantenho atualizado com um **boilerplate** para Gulp, o repositório era pra ser pessoal mas eu resolvi compartilhar.
 
