--- a/source/posts/2015-09-30-8-meses-de-malapronta-e-o-fim.md.erb
+++ b/source/posts/2015-09-30-8-meses-de-malapronta-e-o-fim.md.erb
@@ -8,6 +8,10 @@ categories:
 
 Esse post não poderia começar melhor, com um "*I love U*" para MalaPronta.com, um ambiente descontraído com piadas ruins (mas que são boas) e uma sala que não é nem quente nem fria e nem escura ou clara(entendedores entenderão).
 
+<div class="image">
+  <%= image_tag 'posts/2015/09/galera-do-porao-malapronta.jpg' %>
+</div>
+
 Eu queria poder dizer que to feliz com tudo isso, mas não to. Eu amava trabalhar lá, apesar de muitas intrigas e desavenças, eu amava meu emprego.
 
 Eu vou compartilhar com vocês meus **8 meses** de experiência em uma *startup* com 10 anos de vida, posso dizer que não vi o começo de tudo, mas vi o fim do começo, vi o fim de sonhos e planos, amizades e desavenças, tudo se acabar dentro de uma sala de reuniões de um hotel, tudo se acabou com algumas palavas ditas em dois idiomas, porque um só já não bastava.
@@ -71,5 +75,3 @@ Como eu comentei no início desse post, por mais que existiam intrigas, fofocas 
 Eu aprendi muito com as pessoas em minha volta, desenvolvedores super inteligentes, antenados e focados no trabalho. Aprendi tecnologias novas como Symfony, Vagrant, sistemas de deploys inteligentes, sistemas de monitoramentos, aprendi a ser humilde com os caras mais humildes que já conheci e que são fodas pakas, aprendi que nunca uma piada sua é boa ou tão ruim se não tiver ouvintes que a entendam bem, aprendi que um ambiente (quente ou frio, escuro ou claro) nunca é acolhedor se não tiver pessoas legais é carismáticas nele.
 
 Sempre vou sentir saudades das pessoas do porão da MalaPronta, vulgo **3° andar**.
-
-<%= image_tag 'posts/2015/09/galera-do-porao-malapronta.jpg' %>
