--- a/source/posts/2015-10-12-faco-front-end-de-graca.md.erb
+++ b/source/posts/2015-10-12-faco-front-end-de-graca.md.erb
@@ -28,6 +28,10 @@ Eu tenho amplo conhecimento em tecnologias para _front-end_ como **HTML(Jekyll/l
 
 ## E aí, Bora? 👊
 
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/10/madruga.gif' %>
+</div>
+
 Eu apoio totalmente a troca deconhecimento, seja em uma boa conversa sobre culinária ou em um repositório no _Github_.
 
 Você quer troca figurinhas comigo? Seu projeto está no _Github_ e você precisa de um front-end? Você sabe tocar algum instrumento e tem um projeto bacana para colocar no ar? Podemos nos encontrar e conversar sobre o assunto, podemos fazer isso acontecer...
