--- a/source/posts/2015-12-11-ei-front-end-voce-conhece-o-panda.md.erb
+++ b/source/posts/2015-12-11-ei-front-end-voce-conhece-o-panda.md.erb
@@ -13,7 +13,9 @@ O [Panda 4 - News & Inspiration Dashboard](http://usepanda.com/) é um dashborad
 
 Ele tem a versão [web](http://usepanda.com/app/) e extensões para [Firefox](https://addons.mozilla.org/en-US/firefox/addon/panda-daily-news/) e [Google Chrome](https://chrome.google.com/webstore/detail/panda-4-news-inspiration/haafibkemckmbknhfkiiniobjpgkebko). Eu uso ele nos dois navegadores (Firefox e Chrome).
 
-<%= image_tag 'posts/2015/12/panda-app-chrome-extension.png' %>
+<div class="image">
+  <%= image_tag 'posts/2015/12/panda-app-chrome-extension.png', alt: 'Panda App Chrome extension' %>
+</div>
 
 Acho incrivel apreciar o trabalho de grandes mentes do mundo web e sempre que preciso buscar uma inspiração pra algo que estou criando é nesses sites que encontro o que preciso.
 
