--- a/source/posts/2015-12-11-simplest-mais-um-tema-para-jekyll.md.erb
+++ b/source/posts/2015-12-11-simplest-mais-um-tema-para-jekyll.md.erb
@@ -11,7 +11,9 @@ tags:
 - download
 ---
 
-<%= image_tag '//raw.githubusercontent.com/nandomoreirame/simplest/master/screenshot.png', alt: 'simplest - mais um tema para Jekyll' %>
+<div class="image">
+  <%= image_tag '//raw.githubusercontent.com/nandomoreirame/simplest/master/screenshot.png', alt: 'simplest - mais um tema para Jekyll' %>
+</div>
 
 ## Como usar
 
