--- a/source/posts/2016-01-10-como-incluir-videos-do-youtube-no-jekyll.md.erb
+++ b/source/posts/2016-01-10-como-incluir-videos-do-youtube-no-jekyll.md.erb
@@ -67,7 +67,9 @@ Você também pode especificar uma altura e largura do iframe. Se você não usa
 
 Bom, na verdade copiar e colar o iframe do Youtube não é tão difícil assim (HUE), mas eu **NÃO** gosto muito de misturar <abbr title="HyperText Markup Language">HTML</abbr> com **Markdown** enquanto estou escrevendo um post, mas em alguns casos é necessário.
 
-<%= image_tag 'http://br.web.img1.acsta.net/newsv7/15/04/18/00/55/579877.jpg' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2016/01/vai-sangrar.jpg' %>
+</div>
 
 Então essa foi uma solução bem bacana de incluir o iframe de forma fácil e **"sem sangrar"** por isso.
 
