--- a/source/posts/2016-01-10-wp-cli-uma-interface-de-linha-de-comando-para-wordpress.md.erb
+++ b/source/posts/2016-01-10-wp-cli-uma-interface-de-linha-de-comando-para-wordpress.md.erb
@@ -45,7 +45,9 @@ Agora é só executar `wp --info`.
 
 Executando `wp help` ou apenas `wp` ele nos trará uma lista de subcomandos.
 
-<%= image_tag '/assets/images/posts/2016/01/wp-cli-help.png' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2016/01/wp-cli-help.png' %>
+</div>
 
 Com esses subcomandos você pode ter total controle da sua instalação <abbr title="WordPress">WP</abbr>, você pode instalar e remover plugins e temas, gerenciar categorias, taxonomias e termos, gerenciar comentários, usuários, resumindo, tudo que pode ser feito via `/wp-admin/` poderá ser feito via `WP-CLI`.
 
@@ -57,7 +59,9 @@ wp plugin install hello-dolly
 
 Fácil não?
 
-<%= image_tag '/assets/images/posts/2016/01/wp-cli-theme-status.png' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2016/01/wp-cli-theme-status.png' %>
+</div>
 
 ---
 
