--- a/source/posts/2016-01-23-criando-a-bandeira-do-brasil-apenas-com-css.md.erb
+++ b/source/posts/2016-01-23-criando-a-bandeira-do-brasil-apenas-com-css.md.erb
@@ -68,7 +68,7 @@ E no CSS eu apliquei o seguinte código:
 
 .brasil-flag .losangue:before,
 .brasil-flag .losangue:after {
-  content: '';
+  content: "";
   width: 0;
   height: 0;
   left: 20px;
@@ -169,7 +169,7 @@ Ainda utilizando a classe `.circle` vamos criar a faixa branca da bandeira.
 
 ## O resultado final
 
-<p data-height="220" data-theme-id="0" data-slug-hash="zrRRwx" data-default-tab="result" data-user="nandomoreirame" class='codepen'>See the Pen <a href='http://codepen.io/nandomoreirame/pen/zrRRwx/'>zrRRwx</a> by Fernando Moreira (<a href='http://codepen.io/nandomoreirame'>@nandomoreirame</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+<p data-height="360" data-theme-id="0" data-slug-hash="zrRRwx" data-default-tab="result" data-user="nandomoreirame" class="codepen">See the Pen <a href="http://codepen.io/nandomoreirame/pen/zrRRwx/">zrRRwx</a> by Fernando Moreira (<a href="http://codepen.io/nandomoreirame">@nandomoreirame</a>) on <a href="http://codepen.io">CodePen</a>.</p>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 Ainda falta fazer as estrelas que, ao aceitar o meu [_pull request_](https://github.com/pattle/Flags-in-CSS/pull/5), o [Christopher Pattle](https://github.com/pattle) perguntou se não seria legal coloca-las, bem... Eu estou pensando ainda se coloco. :D
