--- a/source/posts/2016-06-20-usando-browsersync-em-uma-aplicacao-ruby-on-rails.md.erb
+++ b/source/posts/2016-06-20-usando-browsersync-em-uma-aplicacao-ruby-on-rails.md.erb
@@ -9,7 +9,9 @@ tags:
 - npm
 ---
 
-<%= image_tag 'posts/2016/06/painel-browsersync-io.png', alt: 'painel do browsersync.io' %>
+<div class="image">
+  <%= image_tag 'posts/2016/06/painel-browsersync-io.png', alt: 'painel do browsersync.io' %>
+</div>
 
 Aplicações Rails são magníficas não é mesmo? Todas aquelas Gems "mágicas", que fazem de tudo e um pouco mais, são lindas de se ver.
 
