--- a/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
+++ b/source/posts/2016-08-23-agradeca-mais-e-reclame-menos.md.erb
@@ -12,7 +12,9 @@ Você já parou pra pensar quantas vezes você reclama por dia, ou quantas vezes
 
 E se a gente substituir nossas reclamações diárias por agradecimentos?
 
-<%= image_tag '/assets/images/posts/2016/08/thanks.gif' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2016/08/thanks.gif' %>
+</div>
 
 E se pararmos de reclamar que está chovendo no horário de ir pro trabalho apenas agradecer por ter um trabalho?
 
@@ -22,7 +24,9 @@ E se apenas agradecermos por ter agasalhos para nos aquecer todos dias ao invés
 
 Parar de reclamar que está muito quente e simplesmente agradecer pela água ou refrigerante (com limão e gelo) que tomamos, apenas porque podemos.
 
-<%= image_tag '/assets/images/posts/2016/08/nooo.gif' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2016/08/nooo.gif' %>
+</div>
 
 Ao invés de reclamar que as coisas não estão dando certo, porque não agradecer que você quase conseguiu? agradeca que você teve forças e quase chegou perto.
 
@@ -38,7 +42,9 @@ Semana passada eu perdi meu emprego, um trabalho que eu amava apesar de tudo, um
 
 Eu poderia tá puto agora, irritado e xingando tudo e todos ao meu redor, mas não estou, muito pelo contrário estou muito feliz! Dai você pensa: **_"mas quem diabos fica feliz por perder o emprego?”_**
 
-<%= image_tag '/assets/images/posts/2016/08/angry.gif' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2016/08/angry.gif' %>
+</div>
 
 Calma jovem.
 
