--- a/source/posts/2015-09-05-sass-parte-3-mixins.md.erb
+++ b/source/posts/2015-09-05-sass-parte-3-mixins.md.erb
@@ -11,7 +11,9 @@ tags:
 - pre-processador
 ---
 
-<%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+<div class="image">
+  <%= image_tag '/assets/images/posts/2015/09/conhecendo-o-pre-processador-sass.jpg' %>
+</div>
 
 **Mixin** foi definitivamente algo novo para mim, você consegue passar valores por parâmetros assim como funções, a diferença é que uma função retorna apenas 1 único valor e mixin retorna um bloco inteiro de CSS.
 
