--- a/source/partials/_footer.html.slim
+++ b/source/partials/_footer.html.slim
@@ -14,3 +14,14 @@ script#dsq-count-scr async="" data-cfasync="false" src="//#{disqus_shortname}.di
 
 - if enable_zopim
   = partial "partials/zopim"
+
+- if build?
+  noscript
+    iframe height="0" src="//www.googletagmanager.com/ns.html?id=GTM-NBVXKP" style="display:none;visibility:hidden" width="0"
+
+  javascript:
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NBVXKP');
