--- a/source/assets/stylesheets/components/_footer.sass
+++ b/source/assets/stylesheets/components/_footer.sass
@@ -1,6 +1,6 @@
 .footer
   text-align: center
-  padding: $spacing-base 0
+  padding: $spacing-base
 
   svg
     width: 16px
@@ -12,3 +12,4 @@
   small
     color: darken($color-silver, 20%)
     font-weight: $font-weight-light
+    font-size: .8rem
