--- a/source/assets/stylesheets/components/_header.sass
+++ b/source/assets/stylesheets/components/_header.sass
@@ -12,5 +12,5 @@
     position: absolute
 
   .logo
-    +position(absolute, $spacing-base null null $spacing-base)
+    +position(absolute, 40px null null 40px)
     z-index: 10000
