--- a/source/assets/stylesheets/components/_navbar.sass
+++ b/source/assets/stylesheets/components/_navbar.sass
@@ -1,5 +1,5 @@
 .navbar-toggle
-  +position(fixed, $spacing-base $spacing-base null null)
+  +position(fixed, 40px 40px null null)
   z-index: 10000
   padding: 20px 10px
 
@@ -73,6 +73,8 @@
         width: 100%
 
 body.navbar-open
+  overflow: hidden
+
   .navbar
     display: table
 
