--- a/source/posts/2016-09-02-calendario-rapido-direto-no-terminal.md.erb
+++ b/source/posts/2016-09-02-calendario-rapido-direto-no-terminal.md.erb
@@ -2,7 +2,7 @@
 title: "Como ver o Calendário direto pelo terminal"
 date: 2016-09-02 22:12:49
 comments: true
-description: "Esse será uma dica bem curta e rápida, assim como o comando que você vai executar no seu terminal."
+description: "Essa será uma dica bem curta e rápida, assim como o comando que você vai executar no seu terminal."
 categories:
  - dicas
 tags:
@@ -13,7 +13,7 @@ tags:
 
 Você tá focado no código, apenas com algumas ferramentas abertas e não quer procurar o caléndário na listagem de programas instalados no seu computador, ou ir até a barra de ferramentas e clicar na data pra poder ver o calendário completo do mês ou do ano?
 
-Esse será uma dica bem curta e rápida, assim como o comando que você vai executar direto pelo terminal e que vai te ajudar a visualizar o calendário completo de qualquer ano.
+Essa será uma dica bem curta e rápida, assim como o comando que você vai executar direto pelo terminal e que vai te ajudar a visualizar o calendário completo de qualquer ano.
 
 Basta que você digite o comando `cal`, sim isso mesmo.
 
