--- a/source/assets/stylesheets/_syntax.css.erb
+++ b/source/assets/stylesheets/_syntax.css.erb
@@ -1,20 +1,21 @@
-<%= Rouge::Themes::ThankfulEyes.render(:scope => '.highlight') %>
+<%= Rouge::Themes::Github.render(:scope => '.highlight') %>
 
 .highlight {
-  padding: 1.25rem;
+  padding: .8rem 1.25rem;
   margin-bottom: 1.875rem;
   border: none;
   overflow-x: auto;
-  border-radius: 0;
+  border-radius: .1875rem;
 }
 
 .highlight,
 .highlight pre {
-  background-color: #2d3643;
+  background-color: rgba(0, 0, 0, .05);
+  font-size: .8rem;
 }
 
 .highlight code {
-  font-size: 1rem;
+  font-size: .8rem;
   font-weight: 300;
   padding: 0;
   margin: 0;
