--- a/source/assets/stylesheets/components/_paginate.sass
+++ b/source/assets/stylesheets/components/_paginate.sass
@@ -8,6 +8,10 @@
   .next-page
     float: right
 
+  .next-page,
+  .previous-page
+    border: $border-base
+
   .disabled
     pointer-events: none
     cursor: not-allowed
