--- a/source/assets/stylesheets/_variables.sass
+++ b/source/assets/stylesheets/_variables.sass
@@ -1,12 +1,12 @@
 $font-family-base      : 'Ubuntu', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
-$font-family-monospace : 'Consolas', 'Monaco', monospace
+$font-family-monospace : Menlo, Monaco, "Courier New", Courier, monospace
 
 $font-size-unit  : 16px
 $font-size-base  : 1rem
 $font-size-small : .8rem
 $font-size-big   : 1.2rem
 
-$line-height-base    : 1.6
+$line-height-base    : 1.7
 $letter-spacing-base : .025rem
 
 $font-weight-light  : 300
@@ -17,17 +17,17 @@ $color-primary     : #0c59a0
 $color-secondary   : #2d3643
 $color-tertiary    : #008ee0
 $color-quaternary  : #87c2e5
-$color-white       : #fdfffc
+$color-white       : #fff
 $color-black       : #000
 $color-silver      : #ceddd8
 $color-gray        : #222
-$color-base        : $color-secondary
-$background-base   : darken($color-white, 6%) // #f0f0f0
+$color-base        : rgba($color-black, .8)
+$background-base   : darken($color-white, 2%)
 $border-color-base : lighten($color-silver, 6%)
 $input-background  : $color-white
 
 $border-radius-base : .1875rem // 3px
-$border-base        : .1rem solid $border-color-base
+$border-base        : .1rem solid rgba(0, 0, 0, .09)
 
 $spacing-mini  : .625rem    // 10px
 $spacing-small : 1.25rem    // 20px
