--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -13,17 +13,18 @@ body
   font-size: 1.1rem
   font-weight: $font-weight-light
   letter-spacing: $letter-spacing-base
+  line-height: $line-height-base
 
   +media($desktop)
-    font-size: 1.3rem
+    font-size: 1.2rem
 
 a
-  color: darken($color-primary, 10%)
+  color: $color-quaternary
   text-decoration: none
   border: 0
 
   &:hover
-    color: lighten($color-primary, 10%)
+    color: darken($color-tertiary, 5%)
     text-decoration: underline
     outline: none
 
@@ -53,30 +54,26 @@ h1, h2, h3, h4, h5, h6
     border: 0
 
 h1
-  font-size: 2.5rem
+  font-size: 2.2rem
   letter-spacing: -.1rem
   line-height: 1.2
 
 h2
-  font-size: 2rem
+  font-size: 1.8rem
   letter-spacing: -.1rem
   line-height: 1.25
 
 h3
-  font-size: 1.7rem
+  font-size: 1.6rem
   letter-spacing: -.1rem
   line-height: 1.3
 
 h4
-  font-size: 1.5rem
+  font-size: 1.4rem
   letter-spacing: -.08rem
   line-height: 1.35
 
-h5
-  font-size: 1.2rem
-  letter-spacing: -.05rem
-  line-height: 1.5
-
+h5,
 h6
   font-size: 1rem
   letter-spacing: 0
@@ -108,19 +105,21 @@ code
   font-family: $font-family-monospace
 
 code
-  background: lighten($color-silver, 6%)
+  background: rgba($color-black, .05)
   border-radius: $border-radius-base
-  font-size: .8rem
-  padding: .2rem .5rem
+  color: inherit
   margin: 0 .2rem
+  padding: .2rem .5rem
+  font-size: .8rem
   white-space: nowrap
 
 pre
-  background: lighten($color-silver, 6%)
+  background: rgba($color-black, .05)
   border-left: .3rem solid $color-gray
   padding: 0 ($spacing-mini / 2)
 
   & > code
+    font-size: inherit
     background: transparent
     border-radius: 0
     display: block
