--- a/source/assets/stylesheets/components/_card.sass
+++ b/source/assets/stylesheets/components/_card.sass
@@ -1,6 +1,7 @@
 .card
   background-color: $color-white
-  box-shadow: 0 4px 4px rgba($color-black, .1)
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .04)
+  border: $border-base
   border-radius: 3px
   padding: $spacing-base $spacing-small
   max-width: $tablet-large
