--- a/source/assets/stylesheets/main.css.sass
+++ b/source/assets/stylesheets/main.css.sass
@@ -2,7 +2,9 @@
 @import "bourbon"
 
 @import "variables"
-@import "media"
+@import "mixins"
+@import "font-face"
+
 @import "base/reset"
 @import "base/base"
 @import "base/typography"
