--- a/source/assets/stylesheets/_variables.sass
+++ b/source/assets/stylesheets/_variables.sass
@@ -1,5 +1,5 @@
 $font-family-base      : 'Ubuntu', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
-$font-family-monospace : Menlo, Monaco, "Courier New", Courier, monospace
+$font-family-monospace : 'Fira Code', Menlo, Monaco, 'Courier New', Courier, monospace
 
 $font-size-unit  : 16px
 $font-size-base  : 1rem
