Font-face native OSand change post title

--- a/source/assets/stylesheets/components/_article.sass
+++ b/source/assets/stylesheets/components/_article.sass
@@ -10,9 +10,14 @@
 
 .article-meta
   margin-bottom: $spacing-mini
+  font-family: $font-family-serif
+  font-style: italic
 
-  a
-    padding: 0 5px
+  .divider
+    width: 1px
+    height: 15px
+    border: $border-base
+    margin: 0 $spacing-mini
 
   &, a
     font-size: .9rem
