--- a/source/assets/stylesheets/components/_page.sass
+++ b/source/assets/stylesheets/components/_page.sass
@@ -17,11 +17,10 @@
     margin: 1rem auto 0
 
   +media($tablet-large)
-    margin-bottom: ($spacing-big * 2)
+    margin-bottom: ($spacing-big * 1.5)
 
   h1
     color: $color-white
-    text-transform: lowercase
     font-size: 3.2rem
     margin: 0
 
@@ -31,25 +30,6 @@
     +media($desktop)
       font-size: 6rem
 
-// .instafeed
-//   margin: $spacing-base 0
-//   +clearfix
-
-//   a
-//     width: percentage(1/10)
-//     float: left
-//     line-height: 0
-//     background-color: $color-secondary
-//     display: block
-//     +clearfix
-
-//     &:hover
-//       img
-//         opacity: 1
-
-//   img
-//     transition: opacity .2s ease-in-out
-//     height: auto
-//     opacity: .4
-//     width: 100%
-
+  .article-meta
+    opacity: .7
+    color: #fff
