--- a/source/assets/stylesheets/_variables.sass
+++ b/source/assets/stylesheets/_variables.sass
@@ -1,4 +1,6 @@
-$font-family-base      : 'Ubuntu', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+// $font-family-base      : 'Ubuntu', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+$font-family-base : -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
+$font-family-serif     : serif
 $font-family-monospace : 'Fira Code', Menlo, Monaco, 'Courier New', Courier, monospace
 
 $font-size-unit  : 16px
