--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -1,7 +1,6 @@
 // Typography
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
-
-@import '//fonts.googleapis.com/css?family=Ubuntu:300,400,500,700'
+// @import '//fonts.googleapis.com/css?family=Ubuntu:300,400,500,700'
 
 html
   font-size: $font-size-unit
@@ -45,6 +44,7 @@ p, dl, table, blockquote
 h1, h2, h3, h4, h5, h6
   color: inherit
   font-weight: $font-weight-bold
+  letter-spacing: -.05rem
   margin: 0 0 $spacing-base
 
   a
@@ -54,22 +54,18 @@ h1, h2, h3, h4, h5, h6
 
 h1
   font-size: 2.2rem
-  letter-spacing: -.1rem
   line-height: 1.2
 
 h2
   font-size: 1.8rem
-  letter-spacing: -.1rem
   line-height: 1.25
 
 h3
   font-size: 1.6rem
-  letter-spacing: -.1rem
   line-height: 1.3
 
 h4
   font-size: 1.4rem
-  letter-spacing: -.08rem
   line-height: 1.35
 
 h5,
@@ -92,6 +88,8 @@ blockquote
   border-left: .3rem solid $color-quaternary
   padding: $spacing-mini $spacing-small
   color: lighten($color-base, 15%)
+  margin-left: -($spacing-base)
+  margin-right: -($spacing-base)
 
   p
     font-size: 1.6rem
