--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -12,6 +12,8 @@ body
   font-weight: $font-weight-light
   letter-spacing: $letter-spacing-base
   line-height: $line-height-base
+  font-feature-settings: "calt" 1
+  text-rendering: optimizeLegibility
 
   +media($desktop)
     font-size: 1.2rem
