--- a/source/posts/2016-09-02-calendario-rapido-direto-no-terminal.md.erb
+++ b/source/posts/2016-09-02-calendario-rapido-direto-no-terminal.md.erb
@@ -21,7 +21,7 @@ Basta que você digite o comando `cal`, sim isso mesmo.
 $ cal
 ```
 
-O comando acima sem nenhum parâmentro exite o mês atual completo pra você.
+O comando acima sem nenhum parâmentro exibe o mês atual completo pra você.
 
 <div class="image">
   <%= image_tag '/assets/images/posts/2016/09/cal-command.png' %>
